--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <button id ="tile3" onclick = "guess(3)" onmousedown = "startTone(3)" onmouseup = "stopTone()"></button>
       <button id ="tile4" onclick = "guess(4)" onmousedown = "startTone(4)" onmouseup = "stopTone()"></button>
       <button id ="tile5" onclick = "guess(5)" onmousedown = "startTone(5)" onmouseup = "stopTone()"></button>
+      <button id ="tile6" onclick = "guess(6)" onmousedown = "startTone(6)" onmouseup = "stopTone()"></button>
     </div>
 
   </body>
